created publications section

--- a/_includes/home/program-eligibility.html
+++ b/_includes/home/program-eligibility.html
@@ -1,5 +1,5 @@
 <!-- PROGRAM ELIGIBILITY - START -->
-<section id="program-eligibility" class="program-eligibility mobile:padding-y-8 tablet:padding-y-10 desktop-lg:padding-y-15">
+<section id="program-eligibility" class="program-eligibility mobile:padding-top-8 tablet:padding-top-10 desktop-lg:padding-top-15">
     <div class="grid-container">
         <div class="grid-row grid-gap flex-align-center mobile:margin-bottom-6 tablet-lg:margin-bottom-8">
             <div class="tablet-lg:grid-col-7 widescreen:grid-col-4 widescreen:grid-offset-1 program-eligibility__content position-relative mobile:margin-bottom-4 tablet:margin-bottom-0">            
