created our team section

--- a/_includes/home/our-team.html
+++ b/_includes/home/our-team.html
@@ -1,4 +1,4 @@
-<!-- DOE Team - START -->
+<!-- OUR TEAM - START -->
     <section id="our-team" class="our-team mobile:padding-y-8 tablet:padding-y-10 desktop-lg:padding-y-15">
         <div class="grid-container z-index-10 position-relative">
            <div class="grid-row grid-gap">
@@ -7,73 +7,74 @@
              </div>
           </div>
           <div class="grid-row grid-gap text-center flex-align-top flex-justify-center">
-             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                      <img src="assets/img/home/team-henderson.png" alt="Blake Henderson - Diffusion of Excellence Director" />
-                   </div>
-                   <h3>Blake Henderson</h3>
-                   <h4>Diffusion of Excellence Director</h4>
-                </div>
-             </div>
-             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                    <img src="assets/img/home/team-goetschius.png" alt="Amber Goetschius, MEd - Diffusion Specialist" />
-                   </div>
-                   <h3>Amber Goetschius, MEd</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>
-             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                        <img src="assets/img/home/team-fitzgerald.png" alt="Blaine Fitzgerald, MPH - Diffusion Specialist" />
-                   </div>
-                   <h3>Blaine Fitzgerald, MPH</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>
-             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                        <img src="assets/img/home/team-fitzgerald.png" alt="Blaine Fitzgerald, MPH - Diffusion Specialist" />
-                   </div>
-                   <h3>Blaine Fitzgerald, MPH</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>             
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-indra-sandal.png" alt="Indra Sandal - National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC" />
+                  </div>
+                  <h3 class="margin-bottom-0">Indra Sandal</h3>
+                  <h4 class="margin-top-0 text-base-dark">National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC</h4>
+               </div>
+            </div>
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-ben-williams.png" alt="Ben Williams - Co-Lead, VUHC Initiative Director, VTP" />
+                  </div>
+                  <h3 class="margin-bottom-0">Ben Williams</h3>
+                  <h4 class="margin-top-0 text-base-dark">Co-Lead, VUHC Initiative Director, VTP</h4>
+               </div>
+            </div>
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-kristopher-teague.png" alt="Kristopher Teague - Executive Director, VHA Innovation Ecosystem" />
+                  </div>
+                  <h3 class="margin-bottom-0">Kristopher Teague</h3>
+                  <h4 class="margin-top-0 text-base-dark">Executive Director, VHA Innovation Ecosystem</h4>
+               </div>
+            </div>
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-garth-miller.png" alt="Garth Miller - Executive Director Member Services" />
+                  </div>
+                  <h3 class="margin-bottom-0">Garth Miller</h3>
+                  <h4 class="margin-top-0 text-base-dark">Executive Director Member Services</h4>
+               </div>
+            </div>        
           </div>
           <div class="grid-row grid-gap text-center flex-align-top flex-justify-center">
-             <div class="mobile:grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item our-team__long-title">
-                   <div class="our-team__item-img">
-                        <img src="assets/img/home/team-mccoy.png" alt="Carl R. McCoy, MHRD, Sr. FAC PPM, FAC-COR III - Diffusion Specialist" />
-                   </div>
-                   <h3>Carl R. McCoy, MHRD, Sr. FAC PPM, FAC-COR III</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>
-             <div class="mobile:grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                        <img src="assets/img/home/team-hagan.png" alt="Danielle Hagan, MSA - Diffusion Specialist" />
-                   </div>
-                   <h3>Danielle Hagan, MSA</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>
-             <div class="mobile:grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
-                <div class="our-team__item">
-                   <div class="our-team__item-img">
-                        <img src="assets/img/home/team-hagan.png" alt="Danielle Hagan, MSA - Diffusion Specialist" />
-                   </div>
-                   <h3>Danielle Hagan, MSA</h3>
-                   <h4>Diffusion Specialist</h4>
-                </div>
-             </div>             
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-greg-goins.png" alt="Greg Goins - VISN 9 Network Director" />
+                  </div>
+                  <h3 class="margin-bottom-0">Greg Goins</h3>
+                  <h4 class="margin-top-0 text-base-dark">VISN 9<br />
+                     Network Director</h4>
+               </div>
+            </div> 
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-garth-miller.png" alt="Anthony Stazzone - VISN 9 Chief Medical Officer" />
+                  </div>
+                  <h3 class="margin-bottom-0">Anthony Stazzone</h3>
+                  <h4 class="margin-top-0 text-base-dark">VISN 9<br />Chief Medical Officer</h4>
+               </div>
+            </div> 
+            <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
+               <div class="our-team__item">
+                 <div class="our-team__item-img">
+                     <img src="assets/img/team-david-dunning.png" alt="David Dunning - Executive Director, Tampa VAMC" />
+                  </div>
+                  <h3 class="margin-bottom-0">David Dunning</h3>
+                  <h4 class="margin-top-0 text-base-dark">Executive Director, Tampa VAMC</h4>
+               </div>
+            </div>             
           </div>
         </div>
        </div>
      </section>
-     <!-- DOE Team - END -->
+     <!-- OUR TEAM - END -->
