adds style modifier ".vha-button--width-auto"

--- a/_includes/home/publications.html
+++ b/_includes/home/publications.html
@@ -53,12 +53,12 @@
                     </div>                    
                 </div>
                 <div>
-                    <button type="button" class="usa-button vhaPrevBtn">
+                    <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--mobile-inline">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                             <use xlink:href="/assets/uswds/img/sprite.svg#arrow_back"></use>
                         </svg>                    
                     </button>
-                    <button type="button" class="usa-button vhaNextBtn">
+                    <button type="button" class="usa-button vhaNextBtn vha-button vha-button--mobile-inline">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                             <use xlink:href="/assets/uswds/img/sprite.svg#arrow_forward"></use>
                         </svg>
