added lazy loader to images

--- a/_includes/home/announcements-events.html
+++ b/_includes/home/announcements-events.html
@@ -12,7 +12,7 @@
                 <a href="assets/documents/VHA-Uber-Health-Connect-Initiative-FAQ.pdf"class="usa-button button-vha" title="Read the Diffusion Playbook">View and Download FAQ</a>
             </div>
             <div class="tablet:grid-col-4 tablet-lg:grid-col-3 desktop:grid-col-3 mobile:display-none tablet:display-block">
-                <a href="assets/documents/VHA-Uber-Health-Connect-Initiative-FAQ.pdf" title="Read the Diffusion Playbook"><img src="assets/img/announcements-and-events-book.png" class="img-fluid " alt="Cover of the Announcements book" /></a>
+                <a href="assets/documents/VHA-Uber-Health-Connect-Initiative-FAQ.pdf" title="Read the Diffusion Playbook"><img data-src="assets/img/announcements-and-events-book.png" class="img-fluid lazy" alt="Cover of the Announcements book" /></a>
             </div>
         </div>
     </div>
