--- a/_includes/home/initiative-sites.html
+++ b/_includes/home/initiative-sites.html
@@ -8,7 +8,7 @@
             <div class="tablet-lg:grid-col-10 tablet-lg:grid-offset-1">
                 <div class="usa-card initiative-sites__card">
                     <div class="usa-card__container border-0 shadow-4 margin-bottom-neg-15">
-                        <img src="assets/img/map.png" class="img-fluid" alt="Map of USA with markers of site locations" />
+                        <img data-src="assets/img/map.png" class="img-fluid lazy" alt="Map of USA with markers of site locations" />
                     </div>
                 </div>
             </div>
