--- a/_includes/home/multimedia.html
+++ b/_includes/home/multimedia.html
@@ -16,7 +16,7 @@
                         <div class="usa-card__media usa-card__media--inset">
                             <div class="usa-card__img">
                                 <a href="https://www.iheart.com/podcast/269-veterans-corner-radio-60540453/episode/if-you-are-elligible-for-travel-116538865/">
-                                    <img src="assets/img/media-veterans-corner-radio-podcast.png" class="img-fluid radius-lg" alt="Seals from every USA military branch" />
+                                    <img data-src="assets/img/media-veterans-corner-radio-podcast.png" class="img-fluid radius-lg lazy" alt="Seals from every USA military branch" />
                                 </a>
                             </div>
                         </div>
@@ -32,7 +32,7 @@
                         <div class="usa-card__media usa-card__media--inset">
                             <div class="usa-card__img">
                                 <a href="https://www.youtube.com/watch?v=3CeAcsOVsTA&ab_channel=VeteransHealthAdministration">
-                                    <img src="assets/img/media-iex2022-transportation.jpg" class="img-fluid radius-lg" alt="Man presenting on state at iEX 2022" />
+                                    <img data-src="assets/img/media-iex2022-transportation.jpg" class="img-fluid radius-lg lazy" alt="Man presenting on state at iEX 2022" />
                                 </a>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                         <div class="usa-card__media usa-card__media--inset">
                             <div class="usa-card__img">
                                 <a href="https://www.flickr.com/photos/vainnovation/albums/72177720308295566/with/52900844639/">
-                                    <img src="assets/img/media-va-uber-health-connect-visn8-roadshow.png" class="img-fluid radius-lg" alt="Flickr logo" />
+                                    <img data-src="assets/img/media-va-uber-health-connect-visn8-roadshow.png" class="img-fluid radius-lg lazy" alt="Flickr logo" />
                                 </a>
                             </div>
                         </div>
