--- a/_includes/home/our-team.html
+++ b/_includes/home/our-team.html
@@ -10,7 +10,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-indra-sandal.png" alt="Indra Sandal - National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC" />
+                     <img data-src="assets/img/team-indra-sandal.png" alt="Indra Sandal - National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Indra Sandal</h3>
                   <h4 class="margin-top-0 text-base-dark">National Lead, VUHC Initiative Chief of Innovation, Tampa VAMC</h4>
@@ -19,7 +19,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-ben-williams.png" alt="Ben Williams - Co-Lead, VUHC Initiative Director, VTP" />
+                     <img data-src="assets/img/team-ben-williams.png" alt="Ben Williams - Co-Lead, VUHC Initiative Director, VTP" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Ben Williams</h3>
                   <h4 class="margin-top-0 text-base-dark">Co-Lead, VUHC Initiative Director, VTP</h4>
@@ -28,7 +28,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-kristopher-teague.png" alt="Kristopher Teague - Executive Director, VHA Innovation Ecosystem" />
+                     <img data-src="assets/img/team-kristopher-teague.png" alt="Kristopher Teague - Executive Director, VHA Innovation Ecosystem" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Kristopher Teague</h3>
                   <h4 class="margin-top-0 text-base-dark">Executive Director, VHA Innovation Ecosystem</h4>
@@ -37,7 +37,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-garth-miller.png" alt="Garth Miller - Executive Director Member Services" />
+                     <img data-src="assets/img/team-garth-miller.png" alt="Garth Miller - Executive Director Member Services" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Garth Miller</h3>
                   <h4 class="margin-top-0 text-base-dark">Executive Director Member Services</h4>
@@ -48,7 +48,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-greg-goins.png" alt="Greg Goins - VISN 9 Network Director" />
+                     <img data-src="assets/img/team-greg-goins.png" alt="Greg Goins - VISN 9 Network Director" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Greg Goins</h3>
                   <h4 class="margin-top-0 text-base-dark">VISN 9<br />
@@ -58,7 +58,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-anthony-stazzone.png" alt="Anthony Stazzone - VISN 9 Chief Medical Officer" />
+                     <img data-src="assets/img/team-anthony-stazzone.png" alt="Anthony Stazzone - VISN 9 Chief Medical Officer" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">Anthony Stazzone</h3>
                   <h4 class="margin-top-0 text-base-dark">VISN 9<br />Chief Medical Officer</h4>
@@ -67,7 +67,7 @@
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
-                     <img src="assets/img/team-david-dunning.png" alt="David Dunning - Executive Director, Tampa VAMC" />
+                     <img data-src="assets/img/team-david-dunning.png" alt="David Dunning - Executive Director, Tampa VAMC" class="lazy" />
                   </div>
                   <h3 class="margin-bottom-0">David Dunning</h3>
                   <h4 class="margin-top-0 text-base-dark">Executive Director, Tampa VAMC</h4>
