--- a/_includes/home/program-benefits.html
+++ b/_includes/home/program-benefits.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="tablet-lg:grid-col-5 widescreen:grid-col-5 widescreen:grid-offset-1 program-benefits__img">
-                <img src="assets/img/program-benefits.png" class="img-fluid radius-lg" alt="Military veterans sitting at a computer and learning how to use a piece of software" />           
+                <img data-src="assets/img/program-benefits.png" class="img-fluid radius-lg lazy" alt="Military veterans sitting at a computer and learning how to use a piece of software" />           
             </div>
         </div> 
     </div>
