--- a/_includes/home/program-eligibility.html
+++ b/_includes/home/program-eligibility.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="tablet-lg:grid-col-5 widescreen:grid-col-5 widescreen:grid-offset-1 program-eligibility__img">
-                <img src="assets/img/program-eligibility.png" class="img-fluid radius-lg" alt="Physician assisting a military veteran in an office" />           
+                <img data-src="assets/img/program-eligibility.png" class="img-fluid radius-lg lazy" alt="Physician assisting a military veteran in an office" />           
             </div>
         </div> 
     </div>
