--- a/_includes/home/program-requirements.html
+++ b/_includes/home/program-requirements.html
@@ -3,7 +3,7 @@
     <div class="grid-container mobile:padding-y-8 tablet:padding-y-10 desktop-lg:padding-y-15 primary-background--light radius-lg position-relative ">
         <div class="grid-row grid-gap flex-align-center mobile:margin-bottom-6 tablet-lg:margin-bottom-8 ">
             <div class="order-1 tablet-lg:order-0 tablet-lg:grid-col-5 widescreen:grid-col-5 widescreen:grid-offset-1 program-requirements__img ">
-                <img src="assets/img/program-requirements.png" class="img-fluid radius-lg" alt="Direction sign of the VA Hospital. Showing where different departments are located" />           
+                <img data-src="assets/img/program-requirements.png" class="img-fluid radius-lg lazy" alt="Direction sign of the VA Hospital. Showing where different departments are located" />           
             </div>
             <div class="order-0 tablet-lg:order-1 tablet-lg:grid-col-7 widescreen:grid-col-4 widescreen:grid-offset-1 program-requirements__content mobile:margin-bottom-4 tablet:margin-bottom-0">
                 <h2>Program Requirements</h2>
