fix image paths

--- a/_includes/home/publications.html
+++ b/_includes/home/publications.html
@@ -55,12 +55,12 @@
                 <div>
                     <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--width-auto">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
-                            <use xlink:href="/assets/uswds/img/sprite.svg#arrow_back"></use>
+                            <use xlink:href="assets/uswds/img/sprite.svg#arrow_back"></use>
                         </svg>                    
                     </button>
                     <button type="button" class="usa-button vhaNextBtn vha-button vha-button--width-auto">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
-                            <use xlink:href="/assets/uswds/img/sprite.svg#arrow_forward"></use>
+                            <use xlink:href="assets/uswds/img/sprite.svg#arrow_forward"></use>
                         </svg>
                     </button>
                 </div>
