new announce gfx, added submenu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -135,7 +135,7 @@
         <li class="usa-nav__primary-item">
           <button type="button" class="usa-accordion__button usa-nav__link" aria-expanded="false"
             aria-controls="extended-nav-section-one">
-            <span class="font-body-md">About </span>
+            <span class="font-body-md">About&nbsp;&nbsp;&nbsp; </span><i class="arrow down one position-absolute"></i>
           </button>
           <ul id="extended-nav-section-one" class="usa-nav__submenu">
             <li class="usa-nav__submenu-item">
@@ -149,31 +149,68 @@
           </ul>
         </li>
         <li class="usa-nav__primary-item">
-          <button type="button" class="usa-accordion__button usa-nav__link" aria-expanded="false"
+          <button type="button" class="usa-accordion__button usa-nav__link two" aria-expanded="false"
             aria-controls="extended-nav-section-two">
-            <span class="font-body-md">Portfolios and Programs</span> <img class="portfolio-dropdown" src="assets/uswds/img/usa-icons/expand_more-yellow.svg" />
+            <span class="font-body-md">Portfolios and Programs</span><span><i class="arrow down two position-absolute"></span></i>
           </button>
           <ul id="extended-nav-section-two" class="usa-nav__submenu">
-            <li class="usa-nav__submenu-item" title="VHA Innovators Network">
+            <li class="usa-nav__submenu-item one" title="VHA Innovators Network" onmouseover="ShowSolutionsMenu1();">
               <a href="/ecosystem/views/innovators-network/innovators-network.html"
-                class="font-body-md"><span>Innovators Network</span></a>
+                class="font-body-md"><span>Innovators Network</span><span><i class="arrow right one"></i></span></a>
             </li>
-            <li class="usa-nav__submenu-item" title="VHA Diffusion of Excellence">
-              <a href="/ecosystem/views/diffusion-excellence/doe.html" class="font-body-md"><span>Diffusion of
-                  Excellence</span></a>
+            <li class="usa-nav__submenu-item two" focus="" title="VHA Diffusion of Excellence" onmouseover="ShowSolutionsMenu2();">
+              <a class="font-body-md" href="/ecosystem/views/diffusion-excellence/"><span>Diffusion of Excellence</span><span><i class="arrow right two"></i></span></a>
             </li>
-            <li class="usa-nav__submenu-item" title="VHA National Centers for Innovation to Impact">
-              <a href="/ecosystem/views/national-centers/nci2i.html" class="font-body-md"><span>National Centers for
-                  Innovation to Impact</span></a>
+            <li class="usa-nav__submenu-item three" title="VHA National Centers for Innovation to Impact" onmouseover="ShowSolutionsMenu3();">
+              <a href="/ecosystem/views/national-centers/nci2i.html" class="font-body-md"><span>National Centers for Innovation to Impact</span><span><i class="arrow right three"></i></span></a>
             </li>
-            <li class="usa-nav__submenu-item" title="VHA IE Fellowships">
-              <a href="/ecosystem/views/programs/fellowship.html" class="font-body-md"><span>Fellowships</span></a>
+            <li class="usa-nav__submenu-item four" title="VHA IE Fellowships" onmouseover="ShowSolutionsMenu4();">
+              <a href="/ecosystem/views/programs/fellowship.html" class="font-body-md"><span>Fellowships</span><span><i class="arrow right four"></i></span></a>
             </li>
-            <li class="usa-nav__submenu-item" title="VHA IE Community Engagement">
+            <li class="usa-nav__submenu-item five" title="VHA IE Community Engagement" onmouseover="ShowSolutionsMenu5();">
               <a href="/ecosystem/views/programs/community-engagement.html" class="font-body-md"><span>Community
                   Engagement</span></a>
             </li>
+            <div id="smDiv1" class="smDiv grid-col-3" style="display: none;">
+              <div class="grid-row">
+                  <ul class="usa-nav__submenu" style="width:100% !important;">
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/innovators-network/spark-seed-spread.html">Spark-Seed-Spread</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/innovators-network/greenhouse-initiative.html">Greenhouse Initiative</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/innovators-network/inet-resources.html">Employee Innovator Fundamentals</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/innovators-network/vaipm.html">VA Intrapreneurial Product Marketplace</a> </li>
+                  </ul>
+              </div>
+            </div>
+            <div id="smDiv2" class="smDiv grid-col-3" style="display: none;">
+              <div class="grid-row">
+                  <ul class="usa-nav__submenu" style="width:100% !important;">
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/diffusion-excellence/sharktank">VHA Shark Tank Competition</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/diffusion-excellence/national-diffusion-practices">National Diffusion Practices</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/diffusion-excellence/diffusion-talent-accelerator">Diffusion Talent Accelerator</a> </li>
+                      <li class="usa-nav__submenu-item"> <a class="font-body-md" href="https://marketplace.va.gov/">Diffusion Marketplace</a> </li>
+                  </ul>
+              </div>
+            </div>
+            <div id="smDiv3" class="smDiv grid-col-3" style="display: none;">
+              <div class="grid-row">
+                <ul class="usa-nav__submenu" style="width:100% !important;">
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/national-centers/ncchi/">National Center for Collaborative Healthcare Innovation</a> </li>
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/national-centers/necie.html">New England Center for Innovation Excellence</a> </li>
+                </ul>
+              </div>
+            </div>
+            <div id="smDiv4" class="smDiv grid-col-3" style="display: none;">
+              <div class="grid-row">
+                <ul class="usa-nav__submenu" style="width:100% !important;">
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/programs/fellowship-sif.html">Senior Innovation Fellowship</a> </li>
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/programs/fellowship-erf.html">Entrepreneur in Residence Fellowship</a> </li>
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="https://catalyst.mit.edu/">MIT Catalyst Fellowship</a> </li>
+                    <li class="usa-nav__submenu-item"> <a class="font-body-md" href="/ecosystem/views/programs/fellowship-application.html">Fellowships Application</a> </li>
+                </ul>
+              </div>
+            </div>
           </ul>
+          
         </li>
         <li class="usa-nav__primary-item" title="Pathfinder">
           <a href="https://www.pathfinder.va.gov/" class="usa-nav-link font-body-md"><span>Pathfinder</span></a>
@@ -186,7 +223,7 @@
       <div class="usa-nav__secondary">
         <ul class="usa-nav__secondary-links"></ul>
         <section aria-label="Search component">
-          <form class="usa-search usa-search--small" role="search">
+          <form class="usa-search usa-search--small" role="search" action="/search" id="search" method="post">
             <label class="usa-sr-only" for="search-field">Search</label>
             <input class="usa-input" id="search-field" type="search" name="search" placeholder="Search" />
             <button class="usa-button" type="submit">
@@ -199,4 +236,78 @@
     </div>
   </nav>
 </header>
+
+<script>
+  function ShowSolutionsMenu1() {
+    document.getElementById("smDiv1").style.display = "block";
+    document.getElementById("smDiv2").style.display = "none";
+    document.getElementById("smDiv3").style.display = "none";
+    document.getElementById("smDiv4").style.display = "none";
+    document.getElementById("smDiv5").style.display = "none";
+  }
+
+  function ShowSolutionsMenu2() {
+    document.getElementById("smDiv1").style.display = "none";
+    document.getElementById("smDiv2").style.display = "block";
+    document.getElementById("smDiv3").style.display = "none";
+    document.getElementById("smDiv4").style.display = "none";
+    document.getElementById("smDiv5").style.display = "none";
+  }
+
+  function ShowSolutionsMenu3() {
+    document.getElementById("smDiv1").style.display = "none";
+    document.getElementById("smDiv2").style.display = "none";
+    document.getElementById("smDiv3").style.display = "block";
+    document.getElementById("smDiv4").style.display = "none";
+    document.getElementById("smDiv5").style.display = "none";
+  }
+
+  function ShowSolutionsMenu4() {
+    document.getElementById("smDiv1").style.display = "none";
+    document.getElementById("smDiv2").style.display = "none";
+    document.getElementById("smDiv3").style.display = "none";
+    document.getElementById("smDiv4").style.display = "block";
+    document.getElementById("smDiv5").style.display = "none";
+  }
+
+  function ShowSolutionsMenu5() {
+    document.getElementById("smDiv1").style.display = "none";
+    document.getElementById("smDiv2").style.display = "none";
+    document.getElementById("smDiv3").style.display = "none";
+    document.getElementById("smDiv4").style.display = "none";
+    document.getElementById("smDiv5").style.display = "none";
+  }
+
+  $(window).click(function () {
+    document.getElementById("smDiv1").style.display = "none";
+    document.getElementById("smDiv2").style.display = "none";
+    document.getElementById("smDiv3").style.display = "none";
+    document.getElementById("smDiv4").style.display = "none";
+    document.getElementById("smDiv5").style.display = "none";
+  });
+
+  if (window.innerWidth < 1025) {
+    $(".arrow.right.one").click(function () {
+      ShowSolutionsMenu1();
+    }); 
+
+    $(".arrow.right.two").click(function () {
+      ShowSolutionsMenu2();
+    }); 
+
+    $(".arrow.right.three").click(function () {
+      ShowSolutionsMenu3();
+    }); 
+
+    $(".arrow.right.four").click(function () {
+      ShowSolutionsMenu4();
+    }); 
+
+    $(".arrow.right.five").click(function () {
+      ShowSolutionsMenu5();
+    }); 
+  }
+  
+
+</script>
 <!-- END USWDS Header, extended-->
