RP fixes, add YT modal

--- a/_includes/home/multimedia.html
+++ b/_includes/home/multimedia.html
@@ -31,7 +31,10 @@
                         </div>
                         <div class="usa-card__media usa-card__media--inset">
                             <div class="usa-card__img">
-                                <a href="https://www.youtube.com/watch?v=3CeAcsOVsTA&ab_channel=VeteransHealthAdministration">
+                                <a href="https://www.youtube.com/watch?v=3CeAcsOVsTA" class="vha-video__play vha-video__play-action stretched-link">
+                                    <svg viewBox="0 0 46 46" fill="none" class="vha-video__play-icon">
+                                        <path d="M23 0C10.2975 0 0 10.2971 0 23C0 35.7029 10.2975 46 23 46C35.7025 46 46 35.7029 46 23C46 10.2971 35.7025 0 23 0ZM19.534 14.0944C20.2076 13.7011 21.1 13.6666 21.9096 14.2094L30.3324 19.8927C32.7858 21.6913 32.859 24.242 30.3324 26.0935L21.9096 31.7768C20.2904 32.8624 18.4001 31.7515 18.4001 29.7091V16.2748C18.4001 15.2559 18.8601 14.4877 19.534 14.0944Z" fill="white"/>
+                                    </svg>
                                     <img data-src="assets/img/media-iex2022-transportation.jpg" class="img-fluid radius-lg lazy" alt="Man presenting on state at iEX 2022" />
                                 </a>
                             </div>
@@ -65,7 +68,10 @@
                         </div>
                         <div class="usa-card__media usa-card__media--inset">
                             <div class="usa-card__img">
-                                <a href="https://www.youtube.com/watch?v=0MJrHNHYF64">
+                                <a href="https://www.youtube.com/watch?v=0MJrHNHYF64" class="vha-video__play vha-video__play-action stretched-link">
+                                    <svg viewBox="0 0 46 46" fill="none" class="vha-video__play-icon">
+                                        <path d="M23 0C10.2975 0 0 10.2971 0 23C0 35.7029 10.2975 46 23 46C35.7025 46 46 35.7029 46 23C46 10.2971 35.7025 0 23 0ZM19.534 14.0944C20.2076 13.7011 21.1 13.6666 21.9096 14.2094L30.3324 19.8927C32.7858 21.6913 32.859 24.242 30.3324 26.0935L21.9096 31.7768C20.2904 32.8624 18.4001 31.7515 18.4001 29.7091V16.2748C18.4001 15.2559 18.8601 14.4877 19.534 14.0944Z" fill="white"/>
+                                    </svg>
                                     <img data-src="assets/img/media-vha-uber-health-connect-initiative.jpg" class="img-fluid radius-lg lazy" alt="Photo of Indra Sandal speaking with Timothy J. Cooke" />
                                 </a>
                             </div>
