--- a/_includes/home/our-team.html
+++ b/_includes/home/our-team.html
@@ -6,7 +6,7 @@
                 <h1 class="margin-top-0">Our Team</h1>
              </div>
           </div>
-          <div class="grid-row grid-gap text-center flex-align-top flex-justify-center">
+          <div class="grid-row grid-gap text-center flex-align-top flex-justify-center tablet:margin-bottom-9">
             <div class="grid-col-12 tablet:grid-col-3 desktop:grid-col-3">
                <div class="our-team__item">
                  <div class="our-team__item-img">
