--- a/_includes/home/program-benefits.html
+++ b/_includes/home/program-benefits.html
@@ -4,7 +4,7 @@
         <div class="grid-row grid-gap flex-align-center mobile:margin-bottom-6 tablet-lg:margin-bottom-8">
             <div class="tablet-lg:grid-col-7 widescreen:grid-col-4 widescreen:grid-offset-1 program-benefits__content position-relative mobile:margin-bottom-4 tablet:margin-bottom-0">            
                 <h2>Program Benefits</h2>
-                <ul class="line-height-sans-4">
+                <ul class="line-height-sans-4 tablet:margin-bottom-3">
                     <li>Improved Veterans' access to VHA healthcare outcomes and improved quality of life</li>
                     <li>No cost to Veterans and no need to file a claim</li>
                     <li>Simple and quick process to request a ride</li>
