--- a/_includes/home/program-requirements.html
+++ b/_includes/home/program-requirements.html
@@ -7,7 +7,7 @@
             </div>
             <div class="order-0 tablet-lg:order-1 tablet-lg:grid-col-7 widescreen:grid-col-4 widescreen:grid-offset-1 program-requirements__content mobile:margin-bottom-4 tablet:margin-bottom-0">
                 <h2>Program Requirements</h2>
-                <ul class="line-height-sans-4">
+                <ul class="line-height-sans-4 tablet:margin-bottom-3">
                     <li>Veteran must be BT eligible</li>
                     <li>Veteran must be ambulatory and able to get in/out of vehicle unassisted</li>
                     <li>Veteran must be traveling for a VA scheduled appointment for examination, care, or treatment</li>
