--- a/_includes/home/publications.html
+++ b/_includes/home/publications.html
@@ -53,7 +53,7 @@
                     </div>                    
                 </div>
                 <div>
-                    <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--pubs-carousel">
+                    <button type="button" class="usa-button vhaPrevBtn vha-button vha-button--pubs-carousel margin-right-3">
                         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                             <use xlink:href="assets/uswds/img/sprite.svg#arrow_back"></use>
                         </svg>                    
